Add pagination to the /restaurants resource
